fixed MetItem:hover overflow on NabBar

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,5 +1,6 @@
 .navBarContainer {
     position: fixed;
+    z-index: 5;
     top: 0;
     width: 100%;
 }
